Z-index bug fixed

--- a/src/app/shared/components/param-filter/param-filter.component.scss
+++ b/src/app/shared/components/param-filter/param-filter.component.scss
@@ -1,3 +1,3 @@
 :host {
-  z-index: 6;
+  //z-index: 6;
 }
